--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <h2>Graphic Design</h2>
               <p>
                 Passionate about Graphics Designing. I started learning it at
-                the first semester and I m intrested in making logos using Adobe
+                the first semester and I am interested in making logos using Adobe
                 Illustrator and learning poster-making in Adobe Photoshop.
               </p>
             </div>
@@ -115,7 +115,7 @@
               <h2>Communication</h2>
               <p>
                 For an effective leadership and management, Good Communication
-                is one of the most important skills, which I m born with.
+                is one of the most important skills, which I am born with.
               </p>
             </div>
             <div class="card">
@@ -196,9 +196,9 @@
           <p>
             <br />
             
-                     • Ranked among the top 15,000 students out of the total 1.47million candidates who appeared for JEE Mains, 2018 conducted by NTA<br><br>
+                     • Ranked among the top 15,000 students out of the total 1.47million candidates who appeared for JEE Mains, 2020 conducted by NTA<br><br>
                 
-                    • Qualified among top 10,000 students out of 1.74 Lacs candidates who appeared for JEE Advanced, 2018 conducted by IIT Delhi
+                    • Qualified among top 10,000 students out of 1.74 Lacs candidates who appeared for JEE Advanced, 2020 conducted by IIT Delhi
 
           </p>
         </div>
