--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <h3>
                 <a
                   class="footer-link"
-                  href="www.linkedin.com/in/muskan-gupta-iitkgp"
+                  href="https://www.linkedin.com/in/muskan-gupta-iitkgp/"
                   >Linkedin</a
                 >
               </h3>
